infra/configs/kube-system/cilium/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-traffic
  namespace: authentik
spec:
  description: "Allow all traffic in both directions on all ports for both TCP and UDP"
  endpointSelector:
    matchLabels: {}
#      app: authentik
#  ingress:
#    - fromEndpoints:
#      - {}
  egress:
    - toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
#    - toServices:
#        - k8sService:
#            serviceName: postgres-service
#            namespace: postgres
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres-policy
  namespace: postgres
spec:
  endpointSelector:
    matchLabels: {}
#      app: postgres
  ingress:
    - toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
